--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integração Continua</li> 
+        <li>Integração Contínua</li> 
         <li>codinome</li>  
         <li>ASDJHASKLDHJLAKJ</li>    
     </ul>
