--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integração Contínua</li> 
+        <li>Integração Contínua: maturidade e produtividade no desenvolvimento de software</li> 
         <li>codinome</li>  
-        <li>ASDJHASKLDHJLAKdsfaJ</li>    
     </ul>
     
 </body>
